Various fixes
- Do not mark sidebar as closable (it looks bad)
- Fix line-height for compact view with small UI font size
- Opinion on Python split :)

--- a/js/style/treefinder.css
+++ b/js/style/treefinder.css
@@ -77,6 +77,7 @@ tree-finder-panel tree-finder-grid table {
 .jp-tree-finder tree-finder-grid th,
 .jp-tree-finder tree-finder-grid td {
   height: 1lh;
+  line-height: normal;
 }
 
 .jp-tree-finder tbody th {
